--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -153,7 +153,7 @@ legend {
   margin-top: calc(var(--gap) / 4);
 }
 
-input[type="submit"] {
+:is(input,button)[type="submit"] {
   grid-column: 1 / 2;
   
   margin-top: calc(var(--gap) * 2);
